--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     ]
   },
   "dependencies": {
+    "@kubernetes/client-node": "^1.3.0",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
+    "@nestjs/schedule": "^6.0.0",
     "jose": "^6.0.12",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
